--- a/style.css
+++ b/style.css
@@ -21,7 +21,7 @@ body, .container, .video-controls, .video-timer, .options{
     user-select: none;
     max-width: 900px;
     position: relative;
-    /*aspect-ratio: 19 / 6 ;*/
+    /*aspect-ratio: 16 / 9 ;*/
     box-shadow: 0 10px 20px rgba(0, 0, 0, 0.1);
     background: rgb(0, 0, 0);
     border-radius: 5px;
@@ -46,7 +46,7 @@ body, .container, .video-controls, .video-timer, .options{
     transition: all 0.8s ease;
 }
 
-.container .show-controle .wrapper{
+.container .show-controls .wrapper{
     opacity: 1;
     bottom: 0;
     transition: all 0.13s ease;
@@ -129,7 +129,8 @@ body, .container, .video-controls, .video-timer, .options{
     justify-content: flex-end;
 }
 
-.options button{
+button{
+    margin: 0 2px;
     width: 40px;
     height: 40px;
     border: none;
@@ -183,16 +184,17 @@ body, .container, .video-controls, .video-timer, .options{
     position: relative;
 }
 
-.container video{
+/*.container video{
     width: 100%;
-}
+}*/
 
 .playback-content .speed-options{
     position: absolute;
     list-style: none;
     left: -40px;
+    bottom: 40px;
     overflow: hidden;
-    width: 75px;
+    width: 95px;
     border-radius: 4px;
     pointer-events: none;
     background: rgba(255, 255, 255, 0.19);
