--- a/style.css
+++ b/style.css
@@ -2,7 +2,7 @@
     margin: 0;
     padding: 0;
     box-sizing: border-box;
-    font-family: 'Poppins', sans-serif
+    font-family: 'Poppins', sans-serif;
 }
 
 body{
@@ -21,20 +21,20 @@ body, .container, .video-controls, .video-timer, .options{
     user-select: none;
     max-width: 900px;
     position: relative;
-    /*aspect-ratio: 16 / 9 ;*/
+    aspect-ratio: 16 / 9 ;
     box-shadow: 0 10px 20px rgba(0, 0, 0, 0.1);
     background: rgb(0, 0, 0);
     border-radius: 5px;
     overflow: hidden;
 }
 
-.container .fullscreen{
+/*.container .fullscreen{
     max-width: 100%;
     width: 100%;
     height: 100vh;
     border-radius: 0px;
 }
-
+*/
 .wrapper{
     position: absolute;
     left: 0;
@@ -82,7 +82,7 @@ body, .container, .video-controls, .video-timer, .options{
     font-size: 13px;
     color: #fff;
     pointer-events: none;
-    /*transform: translateX(-50%);*/
+    transform: translateX(-50%);
 }
 
 .progress-area .progress-bar{
@@ -101,7 +101,7 @@ body, .container, .video-controls, .video-timer, .options{
     position: absolute;
     border-radius: 50%;
     background: #2289ff;
-    /*transform: translateY(-50%);*/
+    transform: translateY(-50%);
 }
 
 .progress-bar::before, .progress-area span{
@@ -184,9 +184,9 @@ button{
     position: relative;
 }
 
-/*.container video{
+.container video{
     width: 100%;
-}*/
+}
 
 .playback-content .speed-options{
     position: absolute;
@@ -201,7 +201,7 @@ button{
     box-shadow: 0 10px 20px rgba(0, 0, 0, 0.1);
     left: -30px;
     bottom: 30px;
-    /*transition: opacity 0.13s ease;*/
+    transition: opacity 0.13s ease;
 }
 
 .playback-content .speed-options.show{
